[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 315.149
margin_top = 111.002
margin_right = 515.149
margin_bottom = 283.002
rect_scale = Vector2( 2.1852, 2.1852 )

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
text = "Paused"
align = 1
valign = 1

[node name="Button_Resume" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 40 )
text = "Resume"

[node name="Button_Options" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 88.0
margin_right = 200.0
margin_bottom = 128.0
rect_min_size = Vector2( 200, 40 )
text = "Options"

[node name="Button_Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
pause_mode = 2
margin_top = 132.0
margin_right = 200.0
margin_bottom = 172.0
rect_min_size = Vector2( 200, 40 )
text = "Quit"
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button_Resume" to="." method="_on_Button_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button_Options" to="." method="_on_Button_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button_Quit" to="." method="_on_Button_Quit_pressed"]
